--- a/templates/databricks-multi-workspace-oem.template.yaml
+++ b/templates/databricks-multi-workspace-oem.template.yaml
@@ -199,6 +199,7 @@ Parameters:
     Description: "AWS Region where the workspace will be created. Customer-managed keys to encrypt notebooks are not supported in Region us-west-1."
     MinLength: '9'
     AllowedValues:
+       - ap-northeast-2
        - ap-northeast-1
        - ap-south-1
        - ap-southeast-1
